# tcplike

./: CMakeLists.txt  README.md
include/: signal-handler.hpp  tcplike.hpp  udppeer.hpp
src/: filesend-client.cpp  filesend-server.cpp  signal-handler.cpp  tcplike.cpp  udppeer.cpp
